src/components/Products/ProductsList.css
.products h2 {
    text-align: center;
    color: white;
}

.show-add-products {
    text-align: center;
    cursor: pointer;
    margin: 10px auto;
    padding: 10px;
    width: 200px;
    border-radius: 30px;
    color: white;
}

.show-add-products:hover {
    background-color: white;
    color: #FFA500;
}

.select-default-div {
    display: flex;
    justify-content: center;
}

.select-default-div select {
    margin: 10px;
    padding: 10px 20px;
    box-shadow: 1px 1px 10px white;

}

.select-default-div button {
    margin: 10px;
    box-shadow: 1px 1px 10px white;
    border-radius: 30px;
    background-color: #ff6600;
    color: white;
    text-transform: uppercase;
    font-weight: bold;
    cursor: pointer;

}

.select-default-div button:hover {
    background-color: #FFA500;
    color: black;
    box-shadow: 1px 1px 10px 10px rgb(20, 20, 19);


}

@media (max-width: 600px) {
    .products {
        margin-top: 0%;
        padding-bottom: 10%;
        padding-top: 20%;
        height: 100%;
        background-color: #192D40;
    }
}

